# sesame-idam

./: .dockerignore  .git-commit-msg  .gitignore  .pre-commit-config.yaml  .sops.yaml  .tiltignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  Tiltfile  all_endpoints.txt  clippy.toml  docker-compose.yaml  fix_story_2_3.py  fix_token_response.py  justfile  kind-config.yaml  llm-wiki.md  package-lock.json  package.json  photon.toml  rustfmt.toml  stale_api_paths.md  story-1.1-assessment.md  v1_am_paths.md  verify_spec.py
microservices/: Cargo.toml
microservices/.config/: nextest.toml
microservices/database/: Cargo.toml
microservices/database/src/: lib.rs  pre_auth_tenant.rs  rls_context.rs
microservices/database/tests/: rls_users_zero_bleed.rs
microservices/idam/: README.md  seed_order.txt
microservices/idam/api-keys/impl/: Cargo.toml  build.rs
microservices/idam/api-keys/impl/config/: config.yaml
microservices/idam/api-keys/impl/seeds/: README.md
microservices/idam/api-keys/impl/src/: audit.rs  config.rs  lib.rs  main.rs  org_resolution.rs
microservices/idam/api-keys/impl/tests/: main_bdd.rs
microservices/idam/authentication/: README.md
microservices/idam/authorization/: README.md
microservices/idam/authz-core/impl/: Cargo.toml
microservices/idam/authz-core/impl/config/: config.yaml
microservices/idam/authz-core/impl/seeds/: 20260706000001_hauliage_demo_roles.sql  20260715000000_hauliage_app_role_permissions.sql  README.md
microservices/idam/authz-core/impl/src/: audit.rs  auth_error.rs  authz_span_middleware.rs  config.rs  denylist_middleware.rs  lib.rs  main.rs  org_resolution.rs  push_invalidator.rs  security.rs
microservices/idam/authz-core/impl/tests/: BDD-PLAN.md  main_bdd.rs
microservices/idam/common/: Cargo.toml
microservices/idam/common/examples/: print_jwt_signing_env.rs
microservices/idam/common/src/: config.rs  cors.rs  dpop.rs  fallback_cache.rs  http.rs  jwks_cache.rs  jwt.rs  jwt_logging.rs  lib.rs  middleware.rs  token_status.rs
microservices/idam/common/src/audit/: emitter.rs  event.rs  hmac.rs  metrics.rs  mod.rs  queue.rs  rate_limiter.rs  tests.rs
microservices/idam/common/src/denylist/: cache.rs  config.rs  metrics.rs  mod.rs
microservices/idam/common/src/entitlement_cache/: mod.rs  snapshot.rs
microservices/idam/common/src/fallback_cache/: cache.rs  mod.rs  redis.rs  tests.rs  types.rs
microservices/idam/common/src/jwks_cache/: cache.rs  mod.rs  tests.rs  types.rs
microservices/idam/common/src/jwt/: builders.rs  helpers.rs  keyset.rs  mod.rs  signer.rs  tests.rs  ttl.rs  types.rs
microservices/idam/common/src/jwt_common_path/: auth_decision.rs  dpop.rs  jwt_validator.rs  local_policy.rs  middleware.rs  mod.rs  route_policy.rs  shadow_decision.rs
microservices/idam/common/src/token_versioning/: events.rs  publisher.rs  subscriber.rs  version_store.rs
microservices/idam/common/tests/: a6_env_expectations.rs
microservices/idam/identity-login-service/impl/: .nfs.2005198d.7314  Cargo.toml
microservices/idam/identity-login-service/impl/config/: config.yaml
microservices/idam/identity-login-service/impl/src/: lib.rs  (+7 more)
microservices/idam/identity-session-service/impl/: Cargo.toml
microservices/idam/identity-user-mgmt-service/impl/: Cargo.toml
microservices/idam/org-mgmt/impl/: Cargo.toml
microservices/idam/sesame-audit/: Cargo.toml
microservices/idam/sesame-audit/src/: emitter.rs  event.rs  hmac.rs  lib.rs  metrics.rs  queue.rs  rate_limiter.rs  tests.rs
microservices/idam/sesame-denylist/: Cargo.toml
microservices/idam/sesame-denylist/src/: cache.rs  config.rs  lib.rs  metrics.rs  tests.rs
microservices/idam/sesame-entitlement-cache/: Cargo.toml
microservices/idam/sesame-entitlement-cache/src/: lib.rs  snapshot.rs
microservices/idam/sesame-jwt-common-path/: Cargo.toml  fix-plan.md
microservices/idam/sesame-jwt-common-path/src/: auth_decision.rs  dpop.rs  jwt_validator.rs  lib.rs  local_policy.rs  middleware.rs  route_policy.rs  shadow_decision.rs
microservices/idam/sesame-jwt-common-path/tests/: bdd_token_size.rs  edge_cases_token_size.rs  security_token_size.rs
microservices/idam/sesame-token-versioning/: Cargo.toml
microservices/idam/sesame-token-versioning/src/: lib.rs  publisher.rs  subscriber.rs  version_store.rs
microservices/migrator/: Cargo.toml
microservices/migrator/src/: main.rs
microservices/pact-mock-server/: Cargo.toml  README.md  SEARATES-API.json  SEARATES-Rates_ARCHIVED.json  SEARATES-Supported-Terminals_ARCHIVED.json  SEARATES-Terminal-Data_ARCHIVED.json
microservices/pact-mock-server/pacts/: Sesame-OAuth-Google.json  Sesame-OAuth-Microsoft.json  Sesame-SSO-Broker.json
microservices/pact-mock-server/src/: lib.rs  prelude.rs  searates_graphql.rs  sesame_idam_broker.rs
microservices/pact-mock-server/src/modules/: mod.rs
microservices/pact-mock-server/tests/: saml_track_a_contract.rs  searates_graphql_integration.rs  sesame_idam_broker_integration.rs
sesame/: Cargo.toml  Dockerfile
sesame/migrations/: 001__initial_schema.sql
sesame/src/: api_keys.rs  main.rs  mfa.rs  oauth2.rs  org.rs  saml.rs  test_utils.rs  user.rs
sesame/src/entity/: api_key_rate_limits.rs  api_keys.rs  audit_logs.rs  email_verification_tokens.rs  identity_providers.rs  impersonation_logs.rs  login_attempts.rs  metrics_events.rs  mfa_devices.rs  mod.rs  org_login_methods.rs  organizations.rs  password_reset_tokens.rs  permissions.rs  prelude.rs  rate_limit_assignments.rs  rate_limit_counters.rs  rate_limit_policies.rs  role_inheritance.rs  role_permissions.rs  roles.rs  scim_clients.rs  scim_mappings.rs  scim_tokens.rs  sessions.rs  user_organization_info.rs  user_roles.rs  users.rs  waitlist_signups.rs
tooling/: .gitignore  README.md  pyproject.toml
tooling/src/sesame_idam_tooling/: __init__.py  gen_flux_helmreleases.py
tooling/src/sesame_idam_tooling/cli/: __init__.py  main.py  tenant.py
tooling/src/sesame_idam_tooling/tilt/: __init__.py  setup_kind_registry.py  setup_persistent_volumes.py
tooling/tests/: __init__.py  test_placeholder.py  test_tenant_cli.py
(+1066 files in other folders)
