[workspace]
members = [
    # Database layer (shared across all services)
    "database",
    # Shared audit crate
    "idam/sesame-audit",
    # Migration tooling
    "migrator",
    # IDAM microservices — gen crates (generated types + handlers)
    "idam/identity-login-service/gen",
    "idam/identity-login-service/impl",
    "idam/identity-session-service/gen",
    "idam/identity-session-service/impl",
    "idam/identity-user-mgmt-service/gen",
    "idam/identity-user-mgmt-service/impl",
    "idam/api-keys/gen",
    "idam/api-keys/impl",
    # Core services
    "idam/authz-core/gen",
    "idam/authz-core/impl",
    "idam/org-mgmt/gen",
    "idam/org-mgmt/impl",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sesame_audit = { package = "sesame-audit", path = "idam/sesame-audit" }
# BRRTRouter: default-features = false so cross builds don't pull in jemalloc
brrtrouter = { path = "../../BRRTRouter", default-features = false }
brrtrouter_macros = { path = "../../BRRTRouter/brrtrouter_macros" }

# Standard dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
http = "1.0"
may = "0.3"
may_minihttp = "0.1"
may_http = { git = "https://github.com/rust-may/may_http.git" }
http_legacy = { package = "http", version = "0.2" }
anyhow = "1.0"
arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
tikv-jemallocator = { version = "0.6", features = ["profiling"] }
jsonwebtoken = "9.3"
ring = "0.17"
base64 = "0.22"

# Database
lifeguard = { path = "../../lifeguard" }
lifeguard-derive = { path = "../../lifeguard/lifeguard-derive" }
lifeguard-migrate = { path = "../../lifeguard/lifeguard-migrate" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Decimal types from OpenAPI format: decimal / money
rust_decimal = { version = "1.33", features = ["serde-float", "db-postgres"] }
sea-query = { version = "=1.0.0-rc.29", features = ["with-json", "with-chrono", "with-uuid", "with-rust_decimal"] }

# Patch may_postgres to use local fork for dev
[patch."https://github.com/microscaler/may_postgres.git"]
may_postgres = { path = "../../may_postgres" }
