[workspace]
members = [
    # Database layer (shared across all services)
    "database",
    # Shared JWT claims crate (consolidated with all libs)
    "idam/common",
    # Migration tooling
    "migrator",
    # IDAM microservices — gen crates (generated types + handlers)
    "idam/identity-login-service/gen",
    "idam/identity-login-service/impl",
    "idam/identity-session-service/gen",
    "idam/identity-session-service/impl",
    "idam/identity-user-mgmt-service/gen",
    "idam/identity-user-mgmt-service/impl",
    "idam/api-keys/gen",
    "idam/api-keys/impl",
    # Core services
    "idam/authz-core/gen",
    "idam/authz-core/impl",
    "idam/org-mgmt/gen",
    "idam/org-mgmt/impl",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
sesame_common = { package = "sesame-common", path = "idam/common" }
# All shared libs are now modules within common, so individual workspace deps are removed
# BRRTRouter: default-features = false so cross builds don't pull in jemalloc
brrtrouter = { path = "../../BRRTRouter", default-features = false }
brrtrouter_macros = { path = "../../BRRTRouter/brrtrouter_macros" }

# Standard dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
http = "1.0"
may = "0.3"
# Microscaler fork — provides TestClient (see AGENTS.md dependency rules)
may_minihttp = { git = "https://github.com/microscaler/may_minihttp.git", branch = "integration/microscaler-fork" }
may_http = { git = "https://github.com/rust-may/may_http.git" }
http_legacy = { package = "http", version = "0.2" }
anyhow = "1.0"
arc-swap = "1.7"
clap = { version = "4.5", features = ["derive"] }
tikv-jemallocator = { version = "0.6", features = ["profiling"] }
jsonwebtoken = "9.3"
ring = "0.17"
argon2 = "0.5"
base64 = { version = "0.22", features = ["alloc"] }
redis = { version = "0.25", features = ["aio", "tokio-comp", "connection-manager"] }
blake3 = "1.5"
sha2 = "0.10"
prometheus = "0.13"
thiserror = "1.0"
regex = "1.10"
futures = "0.3"
dashmap = "5.5"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
metrics = "0.22"
hex = "0.4"
hmac = "0.12"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }
lazy_static = "1.4"
tracing = "0.1"

# DPoP (RFC 9449) — Ed25519 and P-256 key support
ed25519-dalek = { version = "2", features = ["rand_core"] }
ed25519-zebra = "4"
p256 = { version = "0.13", features = ["ecdsa"] }

# Database
lifeguard = { path = "../../lifeguard" }
lifeguard-derive = { path = "../../lifeguard/lifeguard-derive" }
lifeguard-migrate = { path = "../../lifeguard/lifeguard-migrate" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

# Decimal types from OpenAPI format: decimal / money
rust_decimal = { version = "1.33", features = ["serde-float", "db-postgres"] }
sea-query = { version = "=1.0.0-rc.29", features = ["with-json", "with-chrono", "with-uuid", "with-rust_decimal"] }

# Patch may_postgres to use local fork for dev
[patch."https://github.com/microscaler/may_postgres.git"]
may_postgres = { path = "../../may_postgres" }
