[package]
name = "sesame"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
may_minihttp = "0.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
testcontainers = { version = "0.24.0", features = ["reusable-containers", "reqwest", "ssl", "watchdog", "blocking"] }
tokio = { version = "1.45.0", features = ["full", "test-util"] }
once_cell = "1.21.3"
sea-orm = "1.1.11"
loco = { version = "0.15.0", features = ["test-wizard"] }

[dev-dependencies]


