[package]
name = "sesame-common"
version.workspace = true
edition.workspace = true
description = "Shared JWT claim types, validation, builder, and DPoP for Sesame-IDAM microservices"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true, features = ["v5", "std"] }
chrono = { workspace = true, features = ["serde"] }
regex = "1.10"
base64 = { workspace = true, features = ["alloc"] }
ed25519-dalek = { workspace = true }
ed25519-zebra = { workspace = true }
p256 = { workspace = true }
rand = { workspace = true }
once_cell = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }
brrtrouter = { workspace = true, default-features = false, optional = true }
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"], optional = true }
blake3 = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
arc-swap = { workspace = true, optional = true }
reqwest = { workspace = true, features = ["json", "stream"], optional = true }
tracing = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

[features]
default = []
full = ["metrics", "fallback_cache"]
metrics = ["once_cell", "prometheus", "brrtrouter", "tokio"]
fallback_cache = ["blake3", "redis", "tokio", "futures", "arc-swap", "prometheus", "tracing", "reqwest"]

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
