[package]
name = "sesame-audit"
version.workspace = true
edition.workspace = true
description = "Shared audit event emission interface for Sesame-IDAM microservices"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7"] }
chrono = { workspace = true }
arc-swap = { workspace = true }
tracing = "0.1"
anyhow = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
