[package]
name = "sesame-audit"
version.workspace = true
edition.workspace = true
description = "Security audit logging for Sesame-IDAM — structured JSON, async priority queues, rate limiting, metrics"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "v7"] }
chrono = { workspace = true, features = ["serde"] }
arc-swap = { workspace = true }
tracing = "0.1"
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros", "parking_lot"] }
metrics = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
rand = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
rstest = "0.21"
rstest-bdd = "0.5.0"
rstest-bdd-macros = "0.5.0"
tokio = { workspace = true, features = ["test-util"] }
prometheus = { workspace = true }
