[package]
name = "sesame-denylist"
version.workspace = true
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
redis = "0.25"
tracing = "0.1"
prometheus = "0.13"
anyhow = { workspace = true }
arc-swap = { workspace = true }
rand = "0.8"
chrono = { workspace = true }
tokio = { version = "1", features = ["sync", "time"] }
dashmap = "5.5"
once_cell = "1.19"
