[package]
name = "sesame-entitlement-cache"
version = "0.1.0"
edition = "2021"
description = "Shared entitlement snapshot cache for Sesame-IDAM microservices"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
prometheus = { workspace = true }
tracing = "0.1"
thiserror = { version = "1" }
arc-swap = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
rand = { version = "0.8", optional = true }

[dev-dependencies]
rand = { version = "0.8" }
rstest-bdd = "0.5"
