[package]
name = "sesame-jwt-common-path"
version.workspace = true
edition.workspace = true
description = "JWT common-path authorization middleware for Sesame-IDAM — validates JWTs and evaluates local policy from claims for jwt-only routes"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
sesame_common = { package = "sesame-common", path = "../common" }
prometheus = { workspace = true }
brrtrouter = { path = "../../../../BRRTRouter" }
arc-swap = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
tracing = "0.1"
smallvec = "1"
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
blake3 = { workspace = true }
dashmap = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
async-trait = "0.1"
base64 = "0.21"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
hex = "0.4"

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
prometheus = { workspace = true }
