[package]
name = "sesame_token_versioning"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
redis = { version = "0.25", features = ["aio", "tokio-comp"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"
prometheus = "0.13"
anyhow = { workspace = true }
arc-swap = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
hex = "0.4"
rand = "0.8"
futures-util = "0.3"
