
[package]
name = "sesame_idam_org_mgmt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sesame_idam_org_mgmt"
path = "src/main.rs"

[lib]
name = "sesame_idam_org_mgmt"
path = "src/lib.rs"

[features]
default = []
# jemalloc is opt-in (--features jemalloc). On armv7-unknown-linux-musleabihf and other musl
# targets, tikv-jemallocator can pull in compiler-rt symbols (e.g. __ffsdi2) that are not
# provided by musl, causing link errors. Use default = [] and enable jemalloc only for
# amd64/arm64 glibc builds where it is supported. See: https://github.com/rust-lang/compiler-builtins
jemalloc = ["tikv-jemallocator"]

[dependencies]
# Lifeguard ORM
lifeguard = { workspace = true }
lifeguard-derive = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }

# Database layer
sesame_idam_database = { path = "../../../database" }

sesame_idam_org_mgmt_gen = { path = "../gen" }

brrtrouter = { workspace = true }
brrtrouter_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tikv-jemallocator = { workspace = true, optional = true }
clap = { workspace = true }
may = { workspace = true }

# For brrtrouter runtime: ArcSwap for lock-free router/dispatcher updates
arc-swap = { workspace = true }
sesame_audit = { workspace = true }
may_postgres = { git = "https://github.com/microscaler/may_postgres.git", branch = "master", features = ["with-serde_json-1", "with-chrono-0_4"] }

# Lifeguard derive macros need these
anyhow = { workspace = true }
config = { workspace = true }
http = { workspace = true }
lifeguard-migrate = { workspace = true }
may_minihttp = { workspace = true }
sea-query = { workspace = true }
serde_yaml = { workspace = true }
tracing = "0.1"

[build-dependencies]
lifeguard-migrate = { workspace = true }

# Denylist JTI cache
sesame_denylist = { workspace = true }

[dev-dependencies]
rstest = "0.21"
rstest-bdd = "0.5.0"
rstest-bdd-macros = "0.5.0"

base64 = { workspace = true }
ring = { workspace = true }
sesame_idam_identity_session_service = { path = "../../identity-session-service/impl" }

